--- a/package.json
+++ b/package.json
@@ -4,17 +4,18 @@
   "description": "Socket.io",
   "engines": {
     "node": "12.11.1"
-    },
+  },
   "author": {
     "name": "senhaji"
   },
   "dependencies": {
-     "express": "^4.17.1",
+    "express": "^4.17.1",
     "html-entities": "^1.2.1",
     "nodemon": "^2.0.2",
+    "serve-favicon": "^2.5.0",
     "socket.io": "^2.3.0"
   },
   "scripts": {
     "start": "node server.js"
- }
+  }
 }
